[metadata]
name = gripy
version = 0.0.0a0
author = abrammer
author_email = alan.brammer@gmail.com
url = https://github.com/abrammer/gripy
description = Grib Reader In Python. Developmental repo for a python based grib reader. Replacing external deps with python.

[options]
install_requires = numpy
setup_requires = numpy
packages=gripy, gripy.tables, gripy.legacy

[options.package_data]
* = */*/*.json

[flake8]
exclude=.git,gripy/legacy,__pycache__,build,
max_complexity = 10
max_line_length=127
